--- a/prologin/contest/templates/correction/contestant-base.html
+++ b/prologin/contest/templates/correction/contestant-base.html
@@ -39,7 +39,7 @@
     {% for problem, code in submissions %}
       <h3>{{ problem.title }}
         <small>{% blocktrans with level=problem.difficulty %}Level {{ level }}{% endblocktrans %} ⋅
-          <a href="{% url 'training:problem' edition.year event_type.name problem.name %}{% if code != None %}?fork={{ code.pk }}#submit{% endif %}">
+          <a href="{% url 'problems:problem' edition.year event_type.name problem.name %}{% if code != None %}?fork={{ code.pk }}#submit{% endif %}">
             {% if code != None %}{% trans "Open fullpage and submit again" %}{% else %}{% trans "Open fullpage" %}{% endif %} <i class="fa fa-angle-double-right"></i>
           </a>
         </small>
