semifinal: add a middleware; implement live score board

--- a/prologin/semifinal/templates/prologin/main-footer.html
+++ b/prologin/semifinal/templates/prologin/main-footer.html
@@ -2,6 +2,7 @@
 <div class="row">
   <div class="col-xs-6 col-md-4">
     <h3>{% trans "Prologin" %}</h3>
+    <p><strong>{% blocktrans with center=request.current_event.center.name %}Regional event at {{ center }}{% endblocktrans %}</strong></p>
   </div>
   <div class="col-xs-6 col-md-4">
   </div>
