--- a/prologin/semifinal/templates/prologin/main-menu.html
+++ b/prologin/semifinal/templates/prologin/main-menu.html
@@ -1,6 +1,9 @@
 {% load i18n rules navigation %}
 <ul class="nav navbar-nav pull-right">
-  <li class="{% active '^/contest/' %}"><a href="{% url 'semifinal_summary' %}">{% trans "Participate" %}</a></li>
+{% if request.user.is_authenticated %}
+  <li class="{% active '^/semifinal/' %}"><a href="{% url 'problems:challenge' request.current_edition.year 'semifinal' %}">{% trans "Problems" %}</a></li>
+  <li class="{% active '^/scoreboard' %}"><a href="{% url 'scoreboard' %}">{% trans "Scoreboard" %}</a></li>
+{% endif %}
 {% if request.user.is_staff %}
   <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-star"></i> {% trans "Admin" %} <span class="caret"></span></a>
