semifinals: big fat non-atomic commit, feature is mostly done

--- a/prologin/problems/templates/problems/problem.html
+++ b/prologin/problems/templates/problems/problem.html
@@ -133,7 +133,7 @@
             </form>
           </div>
 
-          <div class="panel panel-default">
+          <div class="panel panel-default" id="history">
             <div class="panel-heading">{% trans "Submission history" %}</div>
             <div class="panel-body">
               <div class="submission-history">
