--- a/prologin/problems/templates/problems/submission.html
+++ b/prologin/problems/templates/problems/submission.html
@@ -4,6 +4,7 @@
 
 {% block breadcrumbs %}
   {{ block.super }}
+  {% breadcrumb_for "problems:challenge" challenge.year challenge.event_type.name %}{{ challenge.event_type|choiceenum_label }} {{ challenge.year }}{% endbreadcrumb_for %}
   {% breadcrumb problem.title "problems:problem" challenge.year challenge.event_type.name problem.name %}
   {% breadcrumb_for "problems:submission" challenge.year challenge.event_type.name problem.name submission.pk %}{% trans "Submission" %}{% endbreadcrumb_for %}
 {% endblock breadcrumbs %}
