--- a/prologin/pages/templates/pages/about-contest.html
+++ b/prologin/pages/templates/pages/about-contest.html
@@ -52,8 +52,8 @@ It is possible to submit the questionnaire by postal mail or directly on this we
   <div class="bgcont" style="background-image: url({% static 'pages/img/semifinals.jpg' %}); background-position: 0 0;">
     <div class="container presentation-body">
       <div class="row"><div class="col-sm-8">
-        <h2>{% trans "2<sup>nd</sup> step – Semifinals" %}</h2>
-      <p>{% blocktrans %}The semifinals allow the 100 best contestants to qualify for the final.
+        <h2>{% trans "2<sup>nd</sup> step – Regional events" %}</h2>
+      <p>{% blocktrans %}The regional events allow the 100 best contestants to qualify for the final.
 The event lasts one day and takes place on a Saturday in January or February,
 depending on the city. Candidates are divided into various sessions in
 different examination centers all across France.
