--- a/prologin/pages/templates/pages/about-organization.html
+++ b/prologin/pages/templates/pages/about-organization.html
@@ -97,7 +97,7 @@ with us!</p>
   <h2 id="contribute">{% trans "Everyone can contribute to Prologin" %}</h2>
   {# TODO: link to forums; link to how to promote (posters) #}
   {% blocktrans %}<p class="text-justify">Contributing can be done in various ways: promoting the event, developing the website and
-the software architecture for the final, helping during the semifinals, contributing in the forums, and so on.
+the software architecture for the final, helping during the regional events, contributing in the forums, and so on.
 We also appreciate your feedback and your suggestions.</p>
 
 <p class="text-justify">We also need your help with the training section, where users can try themselves on a large set of statements.
