--- a/prologin/problems/templates/problems/index.html
+++ b/prologin/problems/templates/problems/index.html
@@ -45,7 +45,7 @@
 
       <p>{% blocktrans %}Want to find out what the Prologin algorithmic exercises are like?
 In this section, you can browse and tackle all the problems from the previous Prologin events. These are
-problems from both the Prologin online qualifications and the on-site semifinals.{% endblocktrans %}</p>
+problems from both the Prologin online qualifications and the on-site regional events.{% endblocktrans %}</p>
     </div>
     <div class="col-sm-6">
       <h3>{% trans "How does it work?" %}</h3>
