--- a/prologin/problems/templates/problems/manual.html
+++ b/prologin/problems/templates/problems/manual.html
@@ -22,7 +22,7 @@ follows is a guide to understand its principles and get the most out of it.
 <p>{% blocktrans %}
 The problems given during the previous editions of the Prologin contest are
 archived and available on this website. You can train with the problems of the
-qualification and semifinals problems of the previous years. They are ordered
+qualification and regional event problems of the previous years. They are ordered
 by year and difficulty: from beginner to advanced.
 {% endblocktrans %}</p>
 
