--- a/prologin/contest/templates/correction/semifinal.html
+++ b/prologin/contest/templates/correction/semifinal.html
@@ -6,10 +6,10 @@
   {% breadcrumb_for '' %}{% trans "Contest" %}{% endbreadcrumb_for %}
   {% breadcrumb_for 'contest:correction-index' %}{% trans "Correction" %}{% endbreadcrumb_for %}
   {% breadcrumb_for 'contest:correction-year' edition.year %}{{ edition.year }}{% endbreadcrumb_for %}
-  {% breadcrumb_for 'contest:correction-semifinal' edition.year event.pk %}{% trans "Semifinal" %} {{ event.short_description }}{% endbreadcrumb_for %}
+  {% breadcrumb_for 'contest:correction-semifinal' edition.year event.pk %}{% trans "Regional event" %} {{ event.short_description }}{% endbreadcrumb_for %}
 {% endblock breadcrumbs %}
 
-{% block title %}{{ event.short_description }} – {% trans "Semifinal" %} {{ edition.year }}{% endblock %}
+{% block title %}{{ event.short_description }} – {% trans "Regional event" %} {{ edition.year }}{% endblock %}
 
 {% block extra_head %}
   <link rel="stylesheet" type="text/css" href="{% static 'lib/css/datatables.min.css' %}">
@@ -17,7 +17,7 @@
 
 {% block content %}
 
-  <h1>{% trans "Semifinal" %} {{ event.short_description }} <small>{% blocktrans with year=edition.year %}Prologin {{ year }}{% endblocktrans %}</small></h1>
+  <h1>{% trans "Regional event" %} {{ event.short_description }} <small>{% blocktrans with year=edition.year %}Prologin {{ year }}{% endblocktrans %}</small></h1>
 
   {{ datatable }}
 
