archives: handle permission to hide challenge links; add cover animation

--- a/prologin/archives/static/css/archives.css
+++ b/prologin/archives/static/css/archives.css
@@ -32,6 +32,12 @@
   background: url('../img/archive-placeholder.png') no-repeat 0 18%;
   background-size: cover;
   z-index: 0;
+  transition: background-position ease-out .8s;
+}
+
+.archive .panel-heading:hover {
+  background-position-y: 80%;
+  transition: background-position ease-out 8s;
 }
 
 .archive .panel-heading h2 {
